unpackaged/main/default/objects/CampaignMember/fields/Account_Status_Committed__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Committed__c</fullName>
    <description>Formula that uses the current status of the related Account within the Committed business line.

Disqualified: DQ reason is not null
Active Customer: # of Committed BUs &gt; 0
Former Customer: # of Won Committed Opportunities &gt; 0
Prospect: # of Opportunities &gt; 0
Unverified: Everything else

Used in - Layout: Campaign Member Page Layout, Report Type: Campaigns_with_Campaign_Members_and_Other

External Systems Utilization: None</description>
    <formula>Contact.Account.Account_Status_Committed__c</formula>
    <inlineHelpText>The current status of the related Account within the Committed business line.

Disqualified: DQ reason is not null
Active Customer: # of Committed BUs &gt; 0
Former Customer: # of Won Committed Opportunities &gt; 0
Prospect: # of Opportunities &gt; 0
Unverified: Everything else</inlineHelpText>
    <label>Account Status (Committed)</label>
    <type>Text</type>
</CustomField>