unpackaged/main/default/objects/CampaignMember/fields/Account_Status_Overall__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Overall__c</fullName>
    <description>Formula that uses the current overall status of the related Account across all business lines.

Used In - Layout: Campaign Member Page Layout, Report Type: Campaigns_with_Campaign_Members and Other

External Systems Utilization: None</description>
    <formula>Contact.Account.Account_Status__c</formula>
    <label>Account Status (Overall)</label>
    <type>Text</type>
</CustomField>