unpackaged/main/default/objects/CampaignMember/fields/Campaign_Member_Notes__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Notes__c</fullName>
    <description>Information captured during or after  the campaign event, which is typically added to the campaign member through a data import.

In Systems Use - Flow: Campaign Member: After Save Automations

External Systems Utilization: None</description>
    <inlineHelpText>Information captured during or after the campaign event, which is typically added to the campaign member through a data import.</inlineHelpText>
    <label>Campaign Member Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>