unpackaged/main/default/objects/CampaignMember/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>Returns the associated Campaign Type. 

In System Use: Campaign Member After Save Automations

External Systems Use: None</description>
    <formula>TEXT(Campaign.Type)</formula>
    <inlineHelpText>Returns the associated Campaign Type.</inlineHelpText>
    <label>Campaign Type</label>
    <type>Text</type>
</CustomField>