unpackaged/main/default/objects/CampaignMember/fields/Corporate_Email__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Email__c</fullName>
    <description>Formula where the checkbox is marked True if the email domain is not Gmail.

In Systems Use: Page layout
Deprecating since a more accurate way to track the info will be a formula that checks the domain type.

External Systems Use: None</description>
    <formula>Not(CONTAINS(Email,&quot;@gmail&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula where the checkbox is marked True if the email domain is not Gmail.</inlineHelpText>
    <label>zOLDCorporate Email?</label>
    <type>Checkbox</type>
</CustomField>