unpackaged/main/default/objects/CampaignMember/fields/Implied_Segment__c.field-meta.xml
<CustomField>
    <fullName>Implied_Segment__c</fullName>
    <description>Formula that uses the Contact Implied Segment if available. If the member is a Lead, then the Lead Implied Segment is used.

In System Use: Layout and Reports

External Systems Utilization: None</description>
    <formula>IF(   ISBLANK(Contact.Contact_Implied_Segment__c) , Lead.Lead_Implied_Segment__c  ,Contact.Contact_Implied_Segment__c )</formula>
    <inlineHelpText>Formula that uses the Contact Implied Segment if available. If the member is a Lead, then the Lead Implied Segment is used.</inlineHelpText>
    <label>Implied Segment</label>
    <type>Text</type>
</CustomField>