unpackaged/main/default/objects/CampaignMember/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Formula that uses the Contact Lead Source if available. If the member is a Lead, then the Source on the Lead is used.

In System Use: Layout and Reports

External Systems Utilization: None</description>
    <formula>IF( ISBLANK(  Contact.Lead_Source_Detail__c ) , Lead.Lead_Source_Detail__c   ,Contact.Lead_Source_Detail__c )</formula>
    <inlineHelpText>Formula that uses the Contact Lead Source if available. If the member is a Lead, then the Source on the Lead is used.</inlineHelpText>
    <label>Lead Source Detail</label>
    <type>Text</type>
</CustomField>