unpackaged/main/default/objects/CampaignMember/fields/Member_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Member_ID_case_safe__c</fullName>
    <description>Formula that provides the unique Salesforce 18 character identifier.

In System Use: Layout and Reports

External Systems Utilization: None</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula that provides the unique Salesforce 18 character identifier.</inlineHelpText>
    <label>Member ID (case safe)</label>
    <type>Text</type>
</CustomField>