unpackaged/main/default/objects/CampaignMember/fields/Ops_Notes_Related__c.field-meta.xml
<CustomField>
    <fullName>Ops_Notes_Related__c</fullName>
    <description>Formula that uses the Contact Ops Notes if available. If the member is a Lead, then the Ops Notes on the Lead is used.

In System Use: Layout and Reports

External Systems Utilization: None</description>
    <formula>IF( ISBLANK( Contact.Ops_Notes__c) , Lead.Ops_Notes__c ,Contact.Ops_Notes__c )</formula>
    <inlineHelpText>Formula that uses the Contact Ops Notes if available. If the member is a Lead, then the Ops Notes on the Lead is used.</inlineHelpText>
    <label>Ops Notes from Related</label>
    <type>Text</type>
</CustomField>