unpackaged/main/default/objects/CampaignMember/fields/Owner_Name_from_Related__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name_from_Related__c</fullName>
    <description>Formula that uses the Contact Account Owner if available. If the member is a Lead, then the Owner on the Lead is used.

In System Use: Layout and Reports

External Systems Utilization: None</description>
    <formula>IF( ISBLANK(  Contact.Account.Owner.FirstName ) ,  Lead.Owner:User.FirstName&amp;&quot; &quot;&amp;Lead.Owner:User.LastName  ,Contact.Account.Owner.FirstName &amp;&quot; &quot;&amp;Contact.Account.Owner.LastName  )</formula>
    <inlineHelpText>Formula that uses the Contact Account Owner if available. If the member is a Lead, then the Owner on the Lead is used.</inlineHelpText>
    <label>Owner Name from Related</label>
    <type>Text</type>
</CustomField>