unpackaged/main/default/objects/CampaignMember/fields/Sendoso_Custom_Message__c.field-meta.xml
<CustomField>
    <fullName>Sendoso_Custom_Message__c</fullName>
    <description>Custom message written by sender through Sendoso.</description>
    <inlineHelpText>Custom message written by sender through Sendoso.</inlineHelpText>
    <label>Sendoso: Custom Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>