unpackaged/main/default/objects/CampaignMember/fields/Sendoso_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Sendoso_Send_Date__c</fullName>
    <description>Date that the gift was sent through Sendoso.</description>
    <inlineHelpText>Date that the gift was sent through Sendoso.</inlineHelpText>
    <label>Sendoso: Send Date</label>
    <type>Date</type>
</CustomField>