unpackaged/main/default/objects/CampaignMember/fields/Sendoso_Sender_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Sendoso_Sender_Full_Name__c</fullName>
    <description>Full Name of the person who sent the gift from Sendoso.</description>
    <inlineHelpText>Full Name of the person who sent the gift from Sendoso.</inlineHelpText>
    <label>Sendoso: Sender Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>