unpackaged/main/default/objects/CampaignMember/fields/Sendoso_Total_Spent_On_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Sendoso_Total_Spent_On_Recipient__c</fullName>
    <description>Total $ amount spent on campaign member from Sendoso.</description>
    <inlineHelpText>Total $ amount spent on campaign member from Sendoso.</inlineHelpText>
    <label>Sendoso: Total $ Spent On Recipient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>