unpackaged/main/default/objects/CampaignMember/fields/Sendoso_Touch_Name__c.field-meta.xml
<CustomField>
    <fullName>Sendoso_Touch_Name__c</fullName>
    <description>Sendoso Touch Name.</description>
    <inlineHelpText>Sendoso Touch Name.</inlineHelpText>
    <label>Sendoso: Touch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>