unpackaged/main/default/objects/CampaignMember/fields/Sendoso_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Sendoso_Tracking_Number__c</fullName>
    <description>Sendoso Tracking Number.</description>
    <inlineHelpText>Sendoso Tracking Number.</inlineHelpText>
    <label>Sendoso: Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>