unpackaged/main/default/objects/CampaignMember/fields/Sendoso_Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Sendoso_Tracking_URL__c</fullName>
    <description>Sendoso Tracking URL.</description>
    <inlineHelpText>Sendoso Tracking URL.</inlineHelpText>
    <label>Sendoso: Tracking URL</label>
    <type>Url</type>
</CustomField>