unpackaged/main/default/objects/CampaignMember/fields/Splash_UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>Splash_UTM_Medium__c</fullName>
    <label>zOLD Splash UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>