unpackaged/main/default/objects/CampaignMember/fields/splashthat__Splash_Unsubscribe_From_Event__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Splash_Unsubscribe_From_Event__c</fullName>
    <description>Field to map Unsubscribe from an event in Splash to a Campaign Member in SF</description>
    <label>Splash Unsubscribe From Event</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>