unpackaged/main/default/objects/CampaignMember/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RevOps use only. Used to rerun record triggered automations.

In System Use: Campaign Member - Before Save Automations

External Systems Utilization: None</description>
    <inlineHelpText>RevOps use only.</inlineHelpText>
    <label>Trigger</label>
    <type>Checkbox</type>
</CustomField>